# kis-quant-desk

./: .dockerignore  .env.production.example  .gitignore  AGENTS.md  Caddyfile  MEMORY.md  README.md  codex-local.sh  compose.yml  pyproject.toml  requirements.txt
.codex/: config.toml
.codex/rules/: default.rules
.codex/scripts/: api_client.py  approve_kr_market_auto_prod_once.sh  auth.py  do_auth.py  install_kr_market_auto_daily_cron.sh  install_kr_market_auto_prod_daily_cron.sh  install_us_market_auto_daily_cron.sh  kr_market_auto_run.py  kr_market_calendar.py  kr_market_llm_decider.py  market_candidate_selector.py  organic_strategy_router.py  prod_telegram_approval.py  remote_risk_monitor.py  run_kr_market_auto_daily.sh  run_kr_market_auto_once.sh  run_kr_market_auto_prod_daily.sh  run_kr_market_auto_prod_once.sh  run_us_market_auto_daily.sh  run_us_market_auto_once.sh  setup_check.py  us_market_auto_run.py  us_market_calendar.py  us_market_llm_decider.py  validate_kis_yaml.py
.github/workflows/: quality-security-safety.yml
backtester/: Dockerfile.backend  Dockerfile.frontend  docker-entrypoint.sh  kis_auth.py
backtester/scripts/: download_master.py
docs/: personal-kis-deployment.md
examples_user/: kis_auth.py  paper_domestic_stock_smoke.py
examples_user/domestic_stock/: domestic_stock_examples.py
scripts/: trading_safety_gate.py
scripts/windows/: bootstrap-kis-stack.ps1
strategies/custom/: bollinger_rsi_mean_reversion.kis.yaml  donchian_adx_breakout.kis.yaml  krx_oversold_reversal.kis.yaml  macd_mfi_confirmation.kis.yaml  supertrend_follow.kis.yaml  today_krx_vwap_rsi_rebound.kis.yaml  today_us_news_trend_filter.kis.yaml  triple_ma_trend_alignment.kis.yaml
strategy_builder/: Dockerfile.backend  Dockerfile.frontend  README.md  kis_auth.py  pyproject.toml
tests/: test_app_reservations.py  test_automation_reports_api.py  test_kr_market_auto_run.py  test_kr_market_calendar.py  test_market_candidate_selector.py  test_orders_api_helpers.py  test_organic_strategy_router.py  test_overseas_balance_api.py  test_overseas_data_fetcher.py  test_protective_local_reservation.py  test_signal_model.py  test_trading_safety_gate.py  test_us_market_auto_run.py  test_us_market_calendar.py
(+75 files in other folders)
